[tool.poetry]
name = "raspi-monitor"
version = "0.1.0"
description = "A program to monitor your Raspberry Pi computer"
authors = ["Alexandros Rikos"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
